# arm_control

./: .gitignore  CMakeLists.txt  CMakeLists.txt.old  README.md  UI_GUIDE.md  __init__.py  package.xml  prompt_context.txt  prueba.py  setup.py
arm_control.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
arm_control/control/: UI.py  end_effector_pose_node.py  exhaustive_scan_node.py  position_sender_node.py  publisher_joint_trajectory_controller.py  publisher_joint_trajectory_planned.py  publisher_joint_trajectory_planned_topic.py  remote_DASHBOARD.py  remote_SCRIPT.py  sensors_distance.py  sensors_distance_orientation.py  sensors_distance_orientation_sim.py  sensors_orientation.py
arm_control/planner/: base_placement_node.py  planner_node.py  visualize_wall_discretization_client.py  wall_discretization_node.py
arm_control/planner/planner_lib/: Astar3D.py  wall_algorithms.py
arm_control/sensors/: hyperspectral_node.py  lenz_client.py  sensors_distance.py  sensors_distance_orientation.py  sensors_distance_orientation_sim.py  sensors_orientation.py  test_hyperspectral_client.py  vis_nir_example.py
collision/include/collision/: constrained_manipulability_mod.hpp  constrained_manipulability_utils.hpp  path_collision_checking.hpp
collision/src/: constrained_manipulability_mod.cpp  constrained_manipulability_mod_main.cpp  constrained_manipulability_utils.cpp  path_collision_checking.cpp  path_collision_checking_main.cpp  polytope.cpp
config/: initial_positions.yaml  mobile_base_geometry.yaml  test_goal_planned_config.yaml  ur_controllers_arm_prefix.yaml  ur_controllers_namespace.yaml
config/moveit/: chomp_planning.yaml  controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  pilz_industrial_motion_planner_planning.yaml  sensors_3d.yaml
control/: UI.py  ee_jacobian_node.cpp  end_effector_pose_node.py  example_move.py  exhaustive_scan_node.py  freedrive_control.py  joint_state_merger_node.py  position_sender_node.py  publisher_joint_trajectory_planned.py  publisher_joint_trajectory_planned_topic.py  qtermwidget_wrapper.py  remote_DASHBOARD.py  remote_SCRIPT.py  robot_command_logger.py  robot_status_check.py  script_command_service_node.py  send_and_monitor_trajectory.py
data_exploration/: data_exploration.ipynb
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/: abstract_robot.launch.py  abstract_ur.launch.py  arm.launch.py  arm_moveit.launch.py  collision_view_ur.launch.py  general.launch.py  legacy_octomap.launch.py  test_scaled_joint_trajectory_controller.launch copy.py  test_scaled_joint_trajectory_planned.launch.py  ur_control.launch.py  ur_sim_control.launch.py  view_urdf.launch.py
log/: latest_build
ml_training/: Dades.csv  adapt_external_dataset.py  cross_validation_test.py  evaluate_pipelines.py  generate_confusion_matrix.py  generate_visuals.py  interpolation.py  kpi_calculus.py  model_entrenat.pkl  model_entrenat_pipeline11.pkl  train_final_model.py  train_model.py
models/: model_entrenat.pkl  model_entrenat_old.pkl
msg/: Polytope.msg
planner/: base_placement_node.py  moveit_planner_node.py  optimal_base_service.py  planner_node.py  visualize_wall_discretization_client.py  wall_discretization_node.py
planner/planner_lib/: Astar3D.py  closed_form_algorithm.py  path_planning.py
planner/rm4d_lib/: __init__.py  base_pos_grid.py  construction.py  exp_utils.py  reachability_map.py
planner/rm4d_lib/robots/: __init__.py  base.py  simulator.py  ur10e.py
planner/rm4d_lib/robots/assets/: __init__.py  ur10e.urdf
resource/: arm_control  orientations_20.pkl  reachability_map_0.05_step_20_orientations.npy  reachability_map_0.1_step_20_orientations.npy  rmap.npy  vl6180x_triple_ros2_ultra.ino
robotic_arm_planner/: base_placement_node.py  planner_node.py  wall_discretization_node.py
robotic_arm_planner/planner_lib/: Astar3D.py  closed_form_algorithm.py
rviz/: moveit.rviz  view_collision_robot.rviz  view_robot.rviz
sensors/: align_ee_to_wall.py  arduino_sensors.py  arduino_sensors_sim.py  hyperspectral_node.py  inspection_manager.py  inspection_manager_old.py  inspection_manager_old2.py  ml_inference_node.py  sensors_distance.py  sensors_distance_orientation.py  sensors_distance_orientation_sim.py  sensors_orientation.py  sensors_orientation_arduino.py  test_hyperspectral_client.py  wall_parallel_controller.py
sensors/sensors_lib/: lenz_client.py  vis_nir_example.py
srdf/: arm_control.srdf.xacro  mobile_manipulator.srdf.xacro
srv/: CheckCollisionPoses.srv  ComputeWallDiscretization.srv  GetJacobianMatrix.srv  GetPolytopes.srv  GetSlicedPolytope.srv  HyperspectralCommand.srv  HyperspectralConfig.srv  OptimalBase.srv  PredictMaterial.srv  ScriptCommand.srv  SendPosition.srv
temp_interfaces/: CMakeLists.txt
temp_interfaces/srv/: OptimalBase.srv
temp_planner/: .gitignore
temp_sensors/: package.xml  setup.cfg  setup.py
temp_sensors/oliwall_sensors/: lenz_client.py
urdf/: BIM_model.urdf  sensor_plate.urdf.xacro  ur.ros2_control.xacro  ur.urdf.xacro  ur_macro.xacro
